# SimpleNN

./: .gitignore  README.md  pyproject.toml
BPExample/: lab2_report.typ  main.py  tesla_prediction.py  weather_prediction.py
Cluster/: fcm.py  kmeans.py  lab3_report.typ  main.py
Cluster/results/: clustering_results.csv
IrisExample/: lab1_report.typ  main.py
SimpleNN/: F.py  __init__.py  functional.py  layer.py  loss.py  metric.py  model.py  optimizer.py  parameter.py  schedular.py  scheduler.py
tests/: __init__.py  conftest.py
tests/test_activations/: __init__.py  test_activations.py
tests/test_layers/: __init__.py  test_dense.py
tests/test_losses/: __init__.py  test_losses.py
tests/test_metrics/: __init__.py  test_metrics.py
tests/test_model/: test_model.py
tests/test_optimizers/: test_optimizers.py
