[project]
name = "SimpleNN"
version = "0.1.0"
description = "一个轻量级神经网络框架,采用Python+Numpy实现,具有tf风格API"
authors = [
    {name = "倪旌哲",email = "lildinosaurni@outlook.com"}
]
readme = "README.md"
requires-python = ">=3.10"

[tool.poetry]
name = "SimpleNN"
version = "0.1.0"
packages = [
    {include = "SimpleNN",from = "."}
]


[tool.poetry.dependencies]
numpy = "^2.2.3"
pandas = "^2.2.3"
matplotlib = "^3.10.1"
seaborn = "^0.13.2"
scikit-learn = "^1.6.1"


[tool.poetry.group.test.dependencies]
pytest = "^8.3.5"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
